--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "the-movie-db",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://xiron9090.github.io/the-movie-db-nextjs",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -21,6 +24,7 @@
     "axios": "^1.4.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "gh-pages": "^6.0.0",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
